WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291218
[WebGPU] Debug metal device detection is failing on LegacySV iOS devices
https://bugs.webkit.org/show_bug.cgi?id=291218
Summary
[WebGPU] Debug metal device detection is failing on LegacySV iOS devices
Mike Wyrzykowski
Reported
2025-04-07 12:24:48 PDT
[WebGPU] Pass splitting is being skipped in RenderBundles on iOS with shader validation enabled
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-04-07 12:57:41 PDT
<
rdar://problem/148445495
>
Mike Wyrzykowski
Comment 2
2025-04-07 12:57:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43727
Mike Wyrzykowski
Comment 3
2025-04-07 13:02:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43760
EWS
Comment 4
2025-04-07 17:44:19 PDT
Committed
293389@main
(7b791573affb): <
https://commits.webkit.org/293389@main
> Reviewed commits have been landed. Closing PR #43760 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug