[WebGPU] Debug metal device detection is failing on LegacySV iOS devices https://bugs.webkit.org/show_bug.cgi?id=291218 rdar://148445495

Reviewed by Cameron McCormack.

The shader validation workaround added in https://bugs.webkit.org/show_bug.cgi?id=290739
was never applied on some devices since their MTLDevice name was MTLLegacySVDevice which
does not contain the string 'Debug'.

No test as LegacySV is only applicable to older iOS devices which are not run as part of EWS.

* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::isShaderValidationEnabled):
Check for both strings.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::executePreDrawCommands):
This is needed on SV iOS devices too, in production we would never encounter this logic.

Canonical link: https://commits.webkit.org/293389@main