Source/WebGPU/WebGPU/RenderBundleEncoder.mm
@@ -353,7 +353,6 @@ bool RenderBundleEncoder::executePreDrawCommands(bool needsValidationLayerWorkar
     if (!icbCommand)
         return true;
 
-#if CPU(X86_64)
     RefPtr renderPassEncoder = m_renderPassEncoder.get();
     if (renderPassEncoder && passWasSplit) {
         id<MTLRenderCommandEncoder> commandEncoder = renderPassEncoder->renderCommandEncoder();
@@ -381,9 +380,6 @@ bool RenderBundleEncoder::executePreDrawCommands(bool needsValidationLayerWorkar
             }
         }
     }
-#else
-    UNUSED_PARAM(passWasSplit);
-#endif
 
     for (auto& [groupIndex, group] : m_bindGroups) {
         RefPtr protectedGroup = group;
